# satellite-deprecated

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  ISSUE_TEMPLATE.md  README.md
carmabreak-sdk/: README.md  build-for-amd-radeon.bat  build-for-nvidia.bat  shaders-list.bat
carmabreak-sdk/guiengine/: pixel.frag  vertex.vert
carmabreak-sdk/hlbvh/: aabbmaker.comp  build-new.comp  child-link.comp  includes.glsl  minmax.comp  refit-incore.comp  refit.comp
carmabreak-sdk/include/: ballotlib.glsl  constants.glsl  mathlib.glsl  morton.glsl  random.glsl  rayslib.glsl  shadinglib.glsl  structs.glsl  uniforms.glsl  vertex.glsl
carmabreak-sdk/output/: render.frag  render.vert
carmabreak-sdk/radix/: histogram.comp  includes.glsl  permute.comp  pfx-work.comp
carmabreak-sdk/rendering/: bin-collect.comp  bvh-traverse.comp  clear.comp  deinterlace.comp  environment.glsl  filter.comp  generation.comp  ocean-dlc.glsl  rayshading.comp  scatter.comp  surface.comp
carmabreak-sdk/unistream/: fragment.frag  geometry.geom  vertex.vert
carmabreak-sdk/vertex/: loader.comp
include/satellite/: ambientIO.hpp  appBase.hpp  gapi.hpp  gapi.inl  guiEngine.hpp  radixSort.hpp  rtengine.hpp  utils.hpp
include/satellite/detail/grlib/: radixSort.inl
include/satellite/detail/rtengine/: materialSet.inl  pipeline.inl  samplerSet.inl  textureSet.inl  triangleHierarchy.inl  vertexInstance.inl  vertexSubnodes.inl
include/satellite/grlib/: radixSort.hpp  radixSort.inl
include/satellite/impl/: gapi.inl  radixSort.inl  utils.inl
include/satellite/impl/grlib/: radixSort.inl
include/satellite/impl/rtengine/: materialSet.inl  pipeline.inl  samplerSet.inl  textureSet.inl  triangleHierarchy.inl  vertexInstance.inl  vertexSubnodes.inl
include/satellite/rtengine/: materialSet.hpp  materialSet.inl  pipeline.hpp  pipeline.inl  rtengine.hpp  samplerSet.hpp  samplerSet.inl  structs.hpp  textureSet.hpp  textureSet.inl  triangleHierarchy.hpp  triangleHierarchy.inl  vertexInstance.hpp  vertexInstance.inl  vertexSubnodes.hpp  vertexSubnodes.inl
include/satellite/rtengine/accelerator/: geometryAccumulator.hpp  geometryAccumulator.inl  hierarchyBuilder.hpp  hierarchyBuilder.inl  hierarchyStorage.hpp  hierarchyStorage.inl
include/satellite/rtengine/geometry/: geometryAccumulator.hpp  hierarchyBuilder.hpp  hierarchyStorage.hpp
include/satellite/rtengine/impl/: materialSet.inl  pipeline.inl  textureSet.inl  triangleHierarchy.inl  vertexInstance.inl  vertexSubnodes.inl
include/satellite/rtengine/vertex/: geometryAccumulator.hpp  geometryAccumulator.inl  vertexInstance.hpp  vertexInstance.inl  vertexSubnodes.hpp  vertexSubnodes.inl
include/satellite/vkutils/: vkStructures.hpp  vkUtils.hpp
include/vulkan/: vk_mem_alloc.h  vulkan.hpp
runconfig/: BoomBox  ChessSet  Cube  LostEmpire  MaterialSpheres  Nier  Voxelia  render-amd.bat  render-nvidia.bat
shaders-sdk/: README.md  build-for-amd-radeon.bat  build-for-intel.bat  build-for-intel.cmd  build-for-nvidia.bat  build-for-nvidia.cmd  build-for-radeon-legacy.cmd  build-for-radeon.bat  build-for-radeon.cmd  build-for-universal.cmd  build-for-vega.cmd  comp.spv  limits.conf  shaders-list.bat  shaders-list.cmd
shaders-sdk/concepts/: bvh-traverse-v2c.comp  registrator.glsl
shaders-sdk/concepts/unistream/: geometry.geom
shaders-sdk/hlbvh/: aabbmaker.comp  build-new.comp  bvh-build.comp  child-link.comp  includes.glsl  leaf-gen.comp  leaf-link.comp  minmax.comp  refit-incore.comp  refit.comp
shaders-sdk/hlbvh2/: bound-calc.comp  bvh-build-once.comp  bvh-build.comp  bvh-fit.comp  includes.glsl  leaf-gen.comp  leaf-link.comp
shaders-sdk/include/: ballotlib.glsl  constants.glsl  mathlib.glsl  morton.glsl  random.glsl  rayslib.glsl  shadinglib.glsl  structs.glsl  uniforms.glsl  vertex.glsl
shaders-sdk/output/: render.frag  render.vert
shaders-sdk/radix/: histogram.comp  includes.glsl  permute.comp  pfx-work.comp
shaders-sdk/rendering/: accumulation.comp  bin-collect.comp  bvh-traverse-v2c.comp  bvh-traverse.comp  clear.comp  deinterlace.comp  environment.glsl  filter.comp  gen-primary.comp  gen-secondary.comp  generation.comp  hit-shader.comp  interpolator.comp  ocean-dlc.glsl  pclear.comp  pgather.comp  pscatter.comp  rayshading.comp  scatter.comp  surface.comp  traverse-bvh.comp  traverse-pre.comp  unordered.comp  vertex-interp.comp
shaders-sdk/rendering/submodules/: environment.glsl  shared-data.glsl  traverse-bvh2.glsl
shaders-sdk/unistream/: geometry.geom  vertex.vert
shaders-sdk/vertex/: loader.comp  vloader.comp
source/: application.hpp  gltfViewer.cpp
testapps/include/: jconfig.h  tiny_gltf.h
testapps/include/CImg/: tinyexr_plugin.cih
testapps/include/framework/: application.hpp
testapps/include/satellite/: appBase.hpp
testapps/include/service/: ambientIO.hpp  guiEngine.hpp
testapps/lib/: FreeImage.lib  glfw3.lib  jpeg-static.lib  jpeg.lib  libpng16.lib  libpng16_static.lib  turbojpeg-static.lib  turbojpeg.lib
testapps/source/: application.hpp  gltfInstanced.cpp  gltfViewer.cpp  gltfViewer.hpp  helloTriangle.cpp  viewer.cpp
userdata/: cmd-for-obj-convert.txt  readme.md
userdata/runconfig/: BoomBox  ChessSet  Cornell  Cube  Helment  LostEmpire  MaterialSpheres  Nier  SampleRoom  SceneCity  Science  Sponza  VkScene  Voxelia  render-amd.bat  render-intel.bat  render-nvidia.bat  render-universal.bat  render-vega.bat
userdata/shaders/amd/hlbvh2/: bound-calc.comp.spv  bvh-build-large.comp.spv  bvh-build.comp  bvh-build.comp.spv  bvh-fit.comp.spv  leaf-gen.comp.spv  leaf-link.comp.spv
userdata/shaders/amd/radix/: histogram.comp.spv  permute.comp.spv  pfx-work.comp.spv
userdata/shaders/amd/rendering/: accumulation.comp.spv  gen-primary.comp.spv  gen-secondary.comp.spv  hit-shader.comp.spv  interpolator.comp.spv  pclear.comp.spv  pgather.comp.spv  traverse-bvh.comp.spv  traverse-pre.comp.spv
userdata/shaders/amd/vertex/: vloader.comp.spv
userdata/shaders/intel/hlbvh2/: bound-calc.comp.spv  bvh-build-large.comp.spv  bvh-build.comp  bvh-build.comp.spv  bvh-fit.comp.spv  leaf-gen.comp.spv  leaf-link.comp.spv
(+63 files in other folders)
